--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %} 
+{% load static %}
+
+{% block css_files%}
+  <link rel="stylesheet" href="{% static "challenges/challenges.css" %}">
+  <link rel="stylesheet" href="{% static "includes/header.css" %}">
+{%endblock%}
 
 {% block page_title %} All Challenges {% endblock %}
 {% block content %}
-<ul>
-  {% for month in months %}
-  <li>
-    <a href="{% url 'month-challenge' month %}">{{month|title}}</a>
-  </li>
-  {% endfor %}
-</ul>
+  {% include "challenges/includes/header.html" %}
+  <ul>
+    {% for month in months %}
+    <li>
+      <a href="{% url 'month-challenge' month %}">{{month|title}}</a>
+    </li>
+    {% endfor %}
+  </ul>
 
 {% endblock %}
