--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %} 
+{% load static %}
+
+{% block css_files%}
+  <link rel="stylesheet" href="{% static "challenges/challenge.css" %}">
+  <link rel="stylesheet" href="{% static "includes/header.css" %}">
+{%endblock%}
 
 {% block page_title %} {{month|title}} Challenges {% endblock %}
 
